[gd_scene load_steps=11 format=4 uid="uid://nt3u2y1dher8"]

[ext_resource type="Script" path="res://scripts/ui/player_selection.gd" id="1_1e2l4"]
[ext_resource type="TileSet" uid="uid://vrst3418t234" path="res://sprites/locations/dungeon/dungeon.tres" id="1_r0t8j"]
[ext_resource type="FontFile" uid="uid://1mina24aowrb" path="res://fonts/DungeonFont.ttf" id="2_bwah3"]
[ext_resource type="PackedScene" uid="uid://dh0c853bfnjtv" path="res://scenes/ui/items_catalog.tscn" id="2_bxrsw"]
[ext_resource type="PackedScene" uid="uid://cyptfcrxg17lf" path="res://scenes/ui/settings.tscn" id="3_013ke"]
[ext_resource type="PackedScene" uid="uid://c6cv3nff50giv" path="res://scenes/ui/character_slot.tscn" id="3_sv0tw"]
[ext_resource type="AudioStream" uid="uid://bupa0ppu5yeqi" path="res://audio/menu_theme.ogg" id="6_yxjxl"]
[ext_resource type="Texture2D" uid="uid://8f0scihit0e1" path="res://sprites/locations/dungeon/fight_white.png" id="7_x7lyh"]
[ext_resource type="Texture2D" uid="uid://c16d0gso7hkpv" path="res://sprites/locations/dungeon/fight_red.png" id="8_5bbfu"]

[sub_resource type="LabelSettings" id="LabelSettings_822if"]
font = ExtResource("2_bwah3")
font_size = 32

[node name="PlayerSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1e2l4")
items_library_scene = ExtResource("2_bxrsw")
settings_scene = ExtResource("3_013ke")

[node name="TileMap" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAABAAcAAAAAAAEAAAABAAcAAAAAAAIAAAACAAcAAAAAAAMAAAABAAcAAAAAAAQAAAACAAYAAAAAAAUAAAACAAYAAAAAAAYAAAABAAYAAAAAAAcAAAACAAYAAAAAAAgAAAACAAcAAAAAAAkAAAACAAcAAAAAAAoAAAABAAYAAAAAAAsAAAACAAYAAAAAAAwAAAABAAYAAAAAAA0AAAACAAcAAAAAAA4AAAACAAcAAAABAAAAAAABAAcAAAABAAEAAAABAAYAAAABAAIAAAABAAYAAAABAAMAAAACAAYAAAABAAQAAAACAAYAAAABAAUAAAACAAcAAAABAAYAAAABAAYAAAABAAcAAAACAAcAAAABAAgAAAABAAcAAAABAAkAAAACAAYAAAABAAoAAAABAAcAAAABAAsAAAACAAcAAAABAAwAAAACAAYAAAABAA0AAAACAAYAAAABAA4AAAACAAcAAAACAAAAAAACAAcAAAACAAEAAAACAAcAAAACAAIAAAABAAcAAAACAAMAAAABAAcAAAACAAQAAAACAAcAAAACAAUAAAACAAYAAAACAAYAAAABAAcAAAACAAcAAAABAAcAAAACAAgAAAABAAYAAAACAAkAAAABAAcAAAACAAoAAAABAAYAAAACAAsAAAABAAcAAAACAAwAAAABAAYAAAACAA0AAAABAAcAAAACAA4AAAACAAcAAAADAAAAAAABAAYAAAADAAEAAAABAAYAAAADAAIAAAACAAcAAAADAAMAAAACAAcAAAADAAQAAAACAAcAAAADAAUAAAACAAcAAAADAAYAAAACAAcAAAADAAcAAAACAAcAAAADAAgAAAABAAcAAAADAAkAAAACAAYAAAADAAoAAAACAAcAAAADAAsAAAACAAYAAAADAAwAAAACAAYAAAADAA0AAAABAAYAAAADAA4AAAACAAcAAAAEAAAAAAACAAcAAAAEAAEAAAABAAYAAAAEAAIAAAACAAYAAAAEAAMAAAABAAYAAAAEAAQAAAACAAYAAAAEAAUAAAABAAcAAAAEAAYAAAACAAYAAAAEAAcAAAABAAYAAAAEAAgAAAACAAYAAAAEAAkAAAACAAcAAAAEAAoAAAACAAYAAAAEAAsAAAACAAcAAAAEAAwAAAABAAcAAAAEAA0AAAABAAYAAAAEAA4AAAACAAYAAAAFAAAAAAABAAcAAAAFAAEAAAACAAYAAAAFAAIAAAACAAYAAAAFAAMAAAACAAcAAAAFAAQAAAABAAYAAAAFAAUAAAABAAcAAAAFAAYAAAABAAcAAAAFAAcAAAABAAYAAAAFAAgAAAACAAcAAAAFAAkAAAABAAYAAAAFAAoAAAACAAYAAAAFAAsAAAACAAcAAAAFAAwAAAACAAYAAAAFAA0AAAACAAYAAAAFAA4AAAABAAcAAAAGAAAAAAACAAYAAAAGAAEAAAABAAYAAAAGAAIAAAABAAYAAAAGAAMAAAABAAYAAAAGAAQAAAABAAcAAAAGAAUAAAACAAcAAAAGAAYAAAABAAYAAAAGAAcAAAABAAYAAAAGAAgAAAABAAYAAAAGAAkAAAACAAYAAAAGAAoAAAACAAcAAAAGAAsAAAABAAcAAAAGAAwAAAABAAcAAAAGAA0AAAACAAYAAAAGAA4AAAACAAYAAAAHAAAAAAABAAYAAAAHAAEAAAACAAcAAAAHAAIAAAACAAcAAAAHAAMAAAACAAcAAAAHAAQAAAABAAcAAAAHAAUAAAACAAYAAAAHAAYAAAABAAcAAAAHAAcAAAABAAcAAAAHAAgAAAABAAYAAAAHAAkAAAABAAcAAAAHAAoAAAACAAcAAAAHAAsAAAACAAYAAAAHAAwAAAACAAcAAAAHAA0AAAACAAcAAAAHAA4AAAABAAYAAAAIAAAAAAACAAYAAAAIAAEAAAABAAcAAAAIAAIAAAACAAcAAAAIAAMAAAABAAYAAAAIAAQAAAABAAcAAAAIAAUAAAACAAYAAAAIAAYAAAACAAcAAAAIAAcAAAABAAcAAAAIAAgAAAACAAcAAAAIAAkAAAABAAYAAAAIAAoAAAACAAcAAAAIAAsAAAACAAcAAAAIAAwAAAACAAYAAAAIAA0AAAACAAcAAAAIAA4AAAACAAYAAAAJAAAAAAABAAcAAAAJAAEAAAABAAcAAAAJAAIAAAABAAcAAAAJAAMAAAACAAcAAAAJAAQAAAABAAYAAAAJAAUAAAACAAcAAAAJAAYAAAACAAcAAAAJAAcAAAABAAYAAAAJAAgAAAACAAYAAAAJAAkAAAACAAcAAAAJAAoAAAACAAcAAAAJAAsAAAACAAcAAAAJAAwAAAACAAcAAAAJAA0AAAABAAYAAAAJAA4AAAABAAcAAAAKAAAAAAACAAYAAAAKAAEAAAACAAcAAAAKAAIAAAACAAYAAAAKAAMAAAACAAYAAAAKAAQAAAACAAYAAAAKAAUAAAABAAcAAAAKAAYAAAABAAcAAAAKAAcAAAACAAcAAAAKAAgAAAACAAYAAAAKAAkAAAABAAYAAAAKAAoAAAACAAYAAAAKAAsAAAABAAYAAAAKAAwAAAACAAcAAAAKAA0AAAABAAYAAAAKAA4AAAACAAcAAAALAAAAAAACAAYAAAALAAEAAAACAAYAAAALAAIAAAACAAcAAAALAAMAAAABAAcAAAALAAQAAAACAAcAAAALAAUAAAACAAYAAAALAAYAAAABAAYAAAALAAcAAAABAAcAAAALAAgAAAACAAcAAAALAAkAAAABAAcAAAALAAoAAAACAAYAAAALAAsAAAABAAYAAAALAAwAAAABAAYAAAALAA0AAAABAAcAAAALAA4AAAACAAcAAAAMAAAAAAACAAcAAAAMAAEAAAABAAcAAAAMAAIAAAABAAcAAAAMAAMAAAACAAcAAAAMAAQAAAABAAcAAAAMAAUAAAABAAcAAAAMAAYAAAACAAcAAAAMAAcAAAACAAcAAAAMAAgAAAABAAYAAAAMAAkAAAABAAYAAAAMAAoAAAACAAYAAAAMAAsAAAABAAYAAAAMAAwAAAABAAcAAAAMAA0AAAABAAYAAAAMAA4AAAABAAYAAAANAAAAAAABAAcAAAANAAEAAAACAAcAAAANAAIAAAABAAYAAAANAAMAAAACAAYAAAANAAQAAAACAAcAAAANAAUAAAACAAYAAAANAAYAAAACAAcAAAANAAcAAAACAAYAAAANAAgAAAABAAYAAAANAAkAAAACAAcAAAANAAoAAAABAAYAAAANAAsAAAACAAYAAAANAAwAAAACAAcAAAANAA0AAAACAAYAAAANAA4AAAACAAYAAAAOAAAAAAABAAcAAAAOAAEAAAACAAcAAAAOAAIAAAABAAYAAAAOAAMAAAACAAYAAAAOAAQAAAABAAYAAAAOAAUAAAACAAYAAAAOAAYAAAACAAYAAAAOAAcAAAACAAYAAAAOAAgAAAABAAYAAAAOAAkAAAABAAYAAAAOAAoAAAACAAcAAAAOAAsAAAABAAcAAAAOAAwAAAACAAcAAAAOAA0AAAACAAcAAAAOAA4AAAABAAYAAAAPAAAAAAABAAcAAAAPAAEAAAABAAcAAAAPAAIAAAACAAYAAAAPAAMAAAACAAYAAAAPAAQAAAABAAYAAAAPAAUAAAABAAcAAAAPAAYAAAACAAcAAAAPAAcAAAABAAYAAAAPAAgAAAACAAcAAAAPAAkAAAABAAcAAAAPAAoAAAACAAcAAAAPAAsAAAACAAYAAAAPAAwAAAACAAcAAAAPAA0AAAACAAYAAAAPAA4AAAABAAYAAAAQAAAAAAABAAcAAAAQAAEAAAABAAYAAAAQAAIAAAACAAYAAAAQAAMAAAACAAcAAAAQAAQAAAABAAYAAAAQAAUAAAACAAcAAAAQAAYAAAABAAYAAAAQAAcAAAABAAcAAAAQAAgAAAACAAcAAAAQAAkAAAACAAYAAAAQAAoAAAACAAYAAAAQAAsAAAABAAYAAAAQAAwAAAABAAYAAAAQAA0AAAACAAcAAAAQAA4AAAACAAcAAAARAAAAAAABAAYAAAARAAEAAAACAAcAAAARAAIAAAACAAcAAAARAAMAAAACAAcAAAARAAQAAAACAAYAAAARAAUAAAACAAYAAAARAAYAAAACAAYAAAARAAcAAAABAAYAAAARAAgAAAABAAYAAAARAAkAAAABAAcAAAARAAoAAAACAAYAAAARAAsAAAACAAYAAAARAAwAAAACAAcAAAARAA0AAAACAAYAAAARAA4AAAABAAYAAAASAAAAAAACAAYAAAASAAEAAAACAAcAAAASAAIAAAABAAYAAAASAAMAAAABAAcAAAASAAQAAAABAAcAAAASAAUAAAACAAYAAAASAAYAAAACAAYAAAASAAcAAAABAAYAAAASAAgAAAACAAcAAAASAAkAAAABAAcAAAASAAoAAAABAAcAAAASAAsAAAACAAcAAAASAAwAAAACAAYAAAASAA0AAAABAAYAAAASAA4AAAABAAcAAAATAAAAAAACAAcAAAATAAEAAAABAAYAAAATAAIAAAACAAcAAAATAAMAAAABAAYAAAATAAQAAAACAAcAAAATAAUAAAABAAcAAAATAAYAAAACAAcAAAATAAcAAAACAAcAAAATAAgAAAABAAcAAAATAAkAAAABAAcAAAATAAoAAAACAAcAAAATAAsAAAACAAYAAAATAAwAAAABAAcAAAATAA0AAAABAAYAAAATAA4AAAACAAYAAAA=")
tile_set = ExtResource("1_r0t8j")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAQAAAAEAA8AAAABAAUAAAAEABAAAAASAAQAAAAGAA8AAAASAAUAAAAGABAAAAA=")
tile_set = ExtResource("1_r0t8j")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -270.0
offset_right = 270.0
offset_bottom = -59.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 39
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "Choose your Fighter"
label_settings = SubResource("LabelSettings_822if")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 40
alignment = 1

[node name="VBoxContainer1" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer1"]
texture_filter = 1
layout_mode = 2
text = "Player 1
"
label_settings = SubResource("LabelSettings_822if")
horizontal_alignment = 1

[node name="Player1Slot" parent="VBoxContainer/HBoxContainer/VBoxContainer1" instance=ExtResource("3_sv0tw")]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2
focus_neighbor_top = NodePath("../../../../SettingsButton")
focus_neighbor_bottom = NodePath("../Player1Bot")

[node name="Player1Bot" type="CheckBox" parent="VBoxContainer/HBoxContainer/VBoxContainer1"]
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("2_bwah3")
theme_override_font_sizes/font_size = 21
text = "bot
"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bwah3")
theme_override_font_sizes/font_size = 20
text = "Stage
"
horizontal_alignment = 1

[node name="StageSelectionSlot" parent="VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_sv0tw")]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
texture_filter = 1
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_bwah3")
theme_override_font_sizes/font_size = 20
text = "
"
horizontal_alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
texture_filter = 1
layout_mode = 2
text = "Player 2
"
label_settings = SubResource("LabelSettings_822if")
horizontal_alignment = 1

[node name="Player2Slot" parent="VBoxContainer/HBoxContainer/VBoxContainer2" instance=ExtResource("3_sv0tw")]
custom_minimum_size = Vector2(150, 150)
layout_mode = 2

[node name="Player2Bot" type="CheckBox" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_direction = 3
layout_mode = 2
size_flags_horizontal = 8
theme_override_fonts/font = ExtResource("2_bwah3")
theme_override_font_sizes/font_size = 21
text = "bot
"

[node name="SettingsButton" type="Button" parent="."]
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 80.0
offset_bottom = 41.0
focus_neighbor_right = NodePath("../VBoxContainer/HBoxContainer/VBoxContainer1/Player1Slot")
focus_neighbor_bottom = NodePath("../VBoxContainer/HBoxContainer/VBoxContainer1/Player1Slot")
theme_override_fonts/font = ExtResource("2_bwah3")
theme_override_font_sizes/font_size = 25
text = "Settings
"

[node name="PlayButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(150, 60)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -76.0
offset_top = -99.0
offset_right = 74.0
offset_bottom = -39.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("7_x7lyh")
texture_pressed = ExtResource("8_5bbfu")
texture_hover = ExtResource("8_5bbfu")
texture_focused = ExtResource("8_5bbfu")
stretch_mode = 3

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_yxjxl")
autoplay = true
bus = &"Music"

[connection signal="toggled" from="VBoxContainer/HBoxContainer/VBoxContainer1/Player1Bot" to="." method="on_player_1_bot_toggled"]
[connection signal="toggled" from="VBoxContainer/HBoxContainer/VBoxContainer2/Player2Bot" to="." method="on_player_2_bot_toggled"]
[connection signal="pressed" from="SettingsButton" to="." method="on_settings_button_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="on_play_button_pressed"]
